fix mobile browser url and action toolbars overlapping dropdown content, style printer action buttons

--- a/src/karmen_frontend/src/assets/styles.scss
+++ b/src/karmen_frontend/src/assets/styles.scss
@@ -176,10 +176,6 @@ footer {
   width: 100%;
   z-index: 1;
   @include blurred-bg;
-  @include plumber(
-    $leading-top: 0,
-    $leading-bottom: 0
-  );
 
   .navigation-content {
     display: flex;
@@ -201,6 +197,7 @@ footer {
   .navigation-brand {
     display: flex;
     align-items: center;
+    font-size: 1.5rem;
 
     img {
       height: $logo-height-xs;
@@ -215,16 +212,19 @@ footer {
     left: 0;
     width: 100%;
     height: 100vh;
+    padding: 10rem 0;
     flex-direction: column;
     align-items: center;
     background: $bg-color;
-    padding: 10rem 0;
     overflow: auto;
     @include blurred-bg(.95);
+  }
+
+  .navigation-item {
     @include plumber(
       $font-size: $navigation-font-size-xs,
-      $leading-top: 9,
-      $leading-bottom: 10,
+      $leading-top: 0,
+      $leading-bottom: 0,
       $line-height: 5
     );
   }
@@ -244,12 +244,7 @@ footer {
   .navigation-toggle-label {
     display: flex;
     align-items: center;
-
-    @include plumber(
-      $font-size: 2.5,
-      $leading-top: 0,
-      $leading-bottom: 0
-    );
+    font-size: 2.5rem;
 
     @media (min-width: $screen-sm-min) {
       .icon-menu {
@@ -318,8 +313,6 @@ footer {
 
   .dropdown {
     .dropdown-items {
-      top: 10px;
-
       @media (min-width: $screen-sm-min) {
         top: $base-unit*4;
       }
@@ -396,6 +389,14 @@ footer {
     $leading-top: 3,
     $leading-bottom: 4
   );
+
+  .btn {
+    margin-right: $base-unit;
+
+    &:last-child {
+      margin-right: 0
+    }
+  }
 }
 
 .text-secondary {
@@ -488,6 +489,17 @@ footer {
 
     &:hover {
       text-decoration: none;
+    }
+  }
+
+  &.btn-outline {
+    background: #fff;
+    color: $color-secondary;
+    border:1px solid $color-secondary;
+
+    &:hover {
+      background: $color-secondary;
+      color: #fff;
     }
   }
 
@@ -617,7 +629,7 @@ footer {
     );
 
     [class^="icon-"] {
-      margin-left: 2px;
+      margin-left: $base-unit/2;
       font-size: 1.5rem;
     }
   }
@@ -816,6 +828,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     align-items: flex-end;;
     z-index: 1;
 
@@ -1186,7 +1199,7 @@ select {
   .printer-detail-meta .main-title {
     margin-bottom: 0;
 
-    @media (max-width: $screen-sm-max) {
+    @media (max-width: $screen-xs-max) {
       margin-top: $base-unit;
     }
   }
